Upgraded masonry & imagesLoaded js libs; fixed bug re: video cards overlapping; improved Dashboard UI

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -4,5 +4,6 @@
 }
 
 .video-card {
-  width: 30rem;
+  width: 20rem;
+  height: auto;
 }
